--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
+		"dev": "tsx src/index.ts",
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types"
 	},
