--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250409.0",
+		"@types/node": "^24.2.1",
 		"prettier": "^3.5.3",
+		"tsx": "^4.20.4",
 		"typescript": "^5.5.2",
 		"wrangler": "^4.7.0"
 	},
 	"dependencies": {
 		"aws4fetch": "^1.0.20",
 		"itty-fetcher": "^0.9.4",
-		"itty-router": "^5.0.18"
+		"itty-router": "^5.0.18",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.7"
 	}
 }
