--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "tsx src/index.ts",
-		"start": "wrangler dev",
-		"cf-typegen": "wrangler types"
+		"build": "tsc",
+		"clean": "find dist -mindepth 1 ! -name '.gitkeep' -exec rm -rf {} +",
+		"start": "node dist/index.js",
+		"format": "prettier --write src/",
+		"dev": "tsx watch src/index.ts"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250409.0",
 		"@types/node": "^24.2.1",
 		"prettier": "^3.5.3",
 		"tsx": "^4.20.4",
-		"typescript": "^5.5.2",
-		"wrangler": "^4.7.0"
+		"typescript": "^5.5.2"
 	},
 	"dependencies": {
 		"aws4fetch": "^1.0.20",
