--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "semi": true,
-  "tabWidth": 4,
-  "useTabs": false,
-  "singleQuote": true,
-  "printWidth": 140,
-  "trailingComma": "es5"
+    "singleQuote": false,
+    "useTabs": false,
+    "tabWidth": 4,
+    "printWidth": 500
 }
