--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 HOST_URL="https://example.com"
 
-# Not needed if using Docker!!
+# Not needed if using Docker!
 HOST="http://localhost"
 PORT=3000
 
